--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     <!-- Fav Icon  -->
     <link rel="shortcut icon" href="./images/favicon.png">
     <!-- Page Title  -->
-    <title> NHID | Login </title>
+    <title> NHID | Registration </title>
     <!-- StyleSheets  -->
     <link rel="stylesheet" href="./assets/css/dashlite.css?ver=3.1.3">
     <link id="skin-default" rel="stylesheet" href="./assets/css/theme.css?ver=3.1.3">
@@ -24,7 +24,7 @@
             <div class="nk-wrap nk-wrap-nosidebar">
                 <!-- content @s -->
                 <div class="nk-content ">
-                    <div class="nk-block nk-block-middle nk-auth-body  wide-xs">
+                    <div class="nk-block nk-block-middle nk-auth-body wide-xs">
                         <div class="brand-logo pb-4 text-center">
                             <a href="index.html" class="logo-link">
                                 <img class="logo-light logo-img logo-img-lg" src="./images/logo.png" srcset="./images/logo2x.png 2x" alt="logo">
@@ -35,26 +35,41 @@
                             <div class="card-inner card-inner-lg">
                                 <div class="nk-block-head">
                                     <div class="nk-block-head-content">
-                                        <h4 class="nk-block-title">Sign-In</h4>
+                                        <h4 class="nk-block-title">Register</h4>
                                         <div class="nk-block-des">
-                                            <p>Access the DashLite panel using your email and passcode.</p>
+                                            <p>Create New NHID Account</p>
                                         </div>
                                     </div>
                                 </div>
-                                <form id="form" action="">
+                                <form action="">
                                     <div class="form-group">
-                                        <div class="form-label-group">
-                                            <label class="form-label" for="username">Email or Username</label>
-                                        </div>
+                                        <label class="form-label" for="name">Hospital Name</label>
                                         <div class="form-control-wrap">
-                                            <input type="text" class="form-control form-control-lg" id="username" placeholder="Enter your email address or username">
+                                            <input type="text" class="form-control form-control-lg" id="name" placeholder="Enter your Hospital name">
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="form-label-group">
-                                            <label class="form-label" for="password">Password</label>
-                                            <a class="link link-primary link-sm" href="password-reset.html">Forgot Password?</a>
+                                        <label class="form-label" for="email">Email or Username</label>
+                                        <div class="form-control-wrap">
+                                            <input type="text" class="form-control form-control-lg" id="email" placeholder="Enter your email address or username">
                                         </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="form-label" for="category">Hospital Category</label>
+                                        <div class="form-control-wrap">
+                                            <select name="category" id="" class="form-control form-control-lg">
+                                                <option value="#">---Select Hospital Category---</option>
+                                                <option value="">Federal/Tertiary Hospital</option>
+                                                <option value="">State/Secondary Hospital</option>
+                                                <option value="">Local Government/Primary Hospital</option>
+                                                <option value="">Private Hospital</option>
+                                            </select>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="form-label" for="password">Passcode</label>
                                         <div class="form-control-wrap">
                                             <a href="#" class="form-icon form-icon-right passcode-switch lg" data-target="password">
                                                 <em class="passcode-icon icon-show icon ni ni-eye"></em>
@@ -64,18 +79,17 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <button type="submit" class="btn btn-lg btn-primary btn-block">Sign in</button>
+                                        <div class="custom-control custom-control-xs custom-checkbox">
+                                            <input type="checkbox" class="custom-control-input" id="checkbox">
+                                            <label class="custom-control-label" for="checkbox">I agree to NHID <a href="#">Privacy Policy</a> &amp; <a href="#"> Terms.</a></label>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <button class="btn btn-lg btn-primary btn-block">Register</button>
                                     </div>
                                 </form>
-                                <div class="form-note-s2 text-center pt-4"> New on our platform? <a href="register.html">Create an account</a>
+                                <div class="form-note-s2 text-center pt-4"> Already have an account? <a href="index.html"><strong>Sign in instead</strong></a>
                                 </div>
-                                <!-- <div class="text-center pt-4 pb-3">
-                                    <h6 class="overline-title overline-title-sap"><span>OR</span></h6>
-                                </div>
-                                <ul class="nav justify-center gx-4">
-                                    <li class="nav-item"><a class="nav-link" href="#">Facebook</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#">Google</a></li>
-                                </ul> -->
                             </div>
                         </div>
                     </div>
@@ -87,37 +101,8 @@
         <!-- main @e -->
     </div>
     <!-- app-root @e -->
-
-    <script>
-        document.getElementById("form").addEventListener("submit", auth);
-        function auth(event) {
-        event.preventDefault();
-
-        var username = document.getElementById("username").value;
-        var password = document.getElementById("password").value;
-
-        if (username.length == "" || password.length == "") {
-            alert("Username or password cannot be empty!");
-            return;
-        } else if (username === "superadmin@demo" && password === "12345") {
-            window.location.replace("superAdmin/super-admin-dashboard.html");
-        } else if (username === "owner" && password === "12345") {
-            window.location.replace("RiskOwner/riskowner_dashboard.html");
-        }
-        else if (username === "manager" && password === "12345") {
-            window.location.replace("BranchLevelRiskManager/branchlevel_dashboard.html");
-        }
-        else if (username === "senior" && password === "12345") {
-            window.location.replace("dashboard.html");
-        }
-         else {
-            alert("Please enter valid information");
-            return;
-        }
-        }
-    </script>
-
     <!-- JavaScript -->
     <script src="./assets/js/bundle.js?ver=3.1.3"></script>
     <script src="./assets/js/scripts.js?ver=3.1.3"></script>
+    <!-- select region modal -->
 </html>
