--- a/superAdmin/super-admin-dashboard.html
+++ b/superAdmin/super-admin-dashboard.html
@@ -112,7 +112,7 @@
                                 </div>
                                 <div class="dropdown-inner">
                                     <ul class="link-list">
-                                        <li><a href="#"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
+                                        <li><a href="index.html"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -1126,7 +1126,7 @@
                                             </div>
                                             <div class="dropdown-inner">
                                                 <ul class="link-list">
-                                                    <li><a href="#"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
+                                                    <li><a href="index.html"><em class="icon ni ni-signout"></em><span>Sign out</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -1145,9 +1145,9 @@
                                 <div class="nk-block-head nk-block-head-sm">
                                     <div class="nk-block-between">
                                         <div class="nk-block-head-content">
-                                            <h3 class="nk-block-title page-title">Dashboard</h3>
+                                            <h3 class="nk-block-title page-title">Federal Ministry of Health Dashboard</h3>
                                             <div class="nk-block-des text-soft">
-                                                <p>Welcome to DashLite Hospital Dashboard Template.</p>
+                                                <p>Welcome to NHID Federal Ministry of Health DashboardSSS.</p>
                                             </div>
                                         </div><!-- .nk-block-head-content -->
                                         <div class="nk-block-head-content">
@@ -1176,6 +1176,99 @@
                                 </div><!-- .nk-block-head -->
                                 <div class="nk-block">
                                     <div class="row g-gs">
+                                        <div class="col-md-4 col-xxl-3">
+                                            <div class="card">
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total Medical Doctors</div>
+                                                                <div class="count">200</div>
+                                                            </div>
+                                                            <em class="icon bg-primary-dim ni ni-users"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
+                                            </div><!-- .card -->
+                                        </div>
+                                        <div class="col-md-4 col-xxl-3">
+                                            <div class="card">
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total Nurses</div>
+                                                                <div class="count">200</div>
+                                                            </div>
+                                                            <em class="icon bg-primary-dim ni ni-users"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
+                                            </div><!-- .card -->
+                                        </div>
+                                        <div class="col-md-4 col-xxl-3">
+                                            <div class="card">
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total Non-Medical Staff</div>
+                                                                <div class="count">200</div>
+                                                            </div>
+                                                            <em class="icon bg-primary-dim ni ni-users"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
+                                            </div><!-- .card -->
+                                        </div>
+
+                                        <div class="col-md-4 col-xxl-3">
+                                            <div class="card">
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total Federal Hospitals</div>
+                                                                <div class="count">2200</div>
+                                                            </div>
+                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
+                                            </div><!-- .card -->
+                                        </div>
+                                        <div class="col-md-4 col-xxl-3">
+                                            <div class="card">
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total State Hospitals</div>
+                                                                <div class="count">1200</div>
+                                                            </div>
+                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
+                                            </div><!-- .card -->
+                                        </div>
+                                        <div class="col-md-4 col-xxl-3">
+                                            <div class="card">
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total LGA Hospitals</div>
+                                                                <div class="count">200</div>
+                                                            </div>
+                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
+                                            </div><!-- .card -->
+                                        </div>
+
+
                                         <div class="col-xxl-3 col-sm-6">
                                             <div class="card">
                                                 <div class="nk-ecwg nk-ecwg6">
