--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="zxx" class="js">
 
 <head>
-    <base href="../../../">
+    <base href="./">
     <meta charset="utf-8">
     <meta name="author" content="Softnio">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A powerful and conceptual apps base dashboard template that especially build for developers and programmers.">
     <!-- Fav Icon  -->
-    <link rel="shortcut icon" href="./images/favicon.png">
+    <link rel="shortcut icon" href="/images/favicon.png">
     <!-- Page Title  -->
     <title> NHID | Login </title>
     <!-- StyleSheets  -->
-    <link rel="stylesheet" href="./assets/css/dashlite.css?ver=3.1.3">
-    <link id="skin-default" rel="stylesheet" href="./assets/css/theme.css?ver=3.1.3">
+    <link rel="stylesheet" href="assets/css/dashlite.css">
+    <link id="skin-default" rel="stylesheet" href="assets/css/theme.css">
 </head>
 
 <body class="nk-body ui-rounder npc-default pg-auth">
@@ -27,8 +27,8 @@
                     <div class="nk-block nk-block-middle nk-auth-body  wide-xs">
                         <div class="brand-logo pb-4 text-center">
                             <a href="index.html" class="logo-link">
-                                <img class="logo-light logo-img logo-img-lg" src="./images/logo.png" srcset="./images/logo2x.png 2x" alt="logo">
-                                <img class="logo-dark logo-img logo-img-lg" src="./images/logo-dark.png" srcset="./images/logo-dark2x.png 2x" alt="logo-dark">
+                                <img class="logo-light logo-img logo-img-lg" src="/images/logo.png" srcset="./images/logo2x.png 2x" alt="logo">
+                                <img class="logo-dark logo-img logo-img-lg" src="/images/logo-dark.png" srcset="./images/logo-dark2x.png 2x" alt="logo-dark">
                             </a>
                         </div>
                         <div class="card card-bordered">
@@ -53,7 +53,7 @@
                                     <div class="form-group">
                                         <div class="form-label-group">
                                             <label class="form-label" for="password">Password</label>
-                                            <a class="link link-primary link-sm" href="password-reset.html">Forgot Password?</a>
+                                            <a class="link link-primary link-sm" href="/password-reset.html">Forgot Password?</a>
                                         </div>
                                         <div class="form-control-wrap">
                                             <a href="#" class="form-icon form-icon-right passcode-switch lg" data-target="password">
@@ -121,6 +121,6 @@
     </script>
 
     <!-- JavaScript -->
-    <script src="./assets/js/bundle.js?ver=3.1.3"></script>
-    <script src="./assets/js/scripts.js?ver=3.1.3"></script>
+    <script src="/assets/js/bundle.js"></script>
+    <script src="/assets/js/scripts.js"></script>
 </html>
