--- a/LocalHospital/local-dashboard.html
+++ b/LocalHospital/local-dashboard.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A powerful and conceptual apps base dashboard template that especially build for developers and programmers.">
     <!-- Fav Icon  -->
-    <link rel="shortcut icon" href="./images/favicon.png">
+    <link rel="shortcut icon" href="./assets/images/favicon.png">
     <!-- Page Title  -->
     <title>Local Government | Dashboard </title>
     <!-- StyleSheets  -->
@@ -22,13 +22,13 @@
             <div class="nk-sidebar-main is-light">
                 <div class="nk-sidebar-inner" data-simplebar>
                     <div class="nk-menu-content menu-active" data-content="navHospital">
-                        <!-- <div class="nk-apps-brand">
-                            <a href="federal-dashboard.html" class="logo-link">
-                                <img class="logo-light logo-img" src="./images/logo-small.png" srcset="./images/logo-small2x.png 2x" alt="logo">
-                                <img class="logo-dark logo-img" src="./images/logo-dark-small.png" srcset="./images/logo-dark-small2x.png 2x" alt="logo-dark">
+                        <div class="nk-apps-brand">
+                            <a href="local-dashboard.html" class="logo-link">
+                                <img class="logo-light logo-img" src="./assets/images/nhid-logo.png" srcset="./images/logo-small2x.png 2x" alt="logo">
+                                <img class="logo-dark logo-img" src="./assets/images/nhid-logo.png" srcset="./images/logo-dark-small2x.png 2x" alt="logo-dark">
                             </a>
-                        </div> -->
-                        <h5 class="title">NHID</h5>
+                        </div>
+                        <!-- <h5 class="title">NHID</h5> -->
                         <ul class="nk-menu">
                             <li class="nk-menu-item">
                                 <a href="html/hospital/index.html" class="nk-menu-link">
