--- a/superAdmin/super-admin-dashboard.html
+++ b/superAdmin/super-admin-dashboard.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A powerful and conceptual apps base dashboard template that especially build for developers and programmers.">
     <!-- Fav Icon  -->
-    <link rel="shortcut icon" href="./images/favicon.png">
+    <link rel="shortcut icon" href="./assets/images/favicon.png">
     <!-- Page Title  -->
     <title> Super Admin | Dashboard </title>
     <!-- StyleSheets  -->
@@ -23,8 +23,8 @@
             <div class="nk-sidebar-bar">
                 <div class="nk-apps-brand">
                     <a href="#" class="logo-link">
-                        <img class="logo-light logo-img" src="./images/logo-small.png" srcset="./images/logo-small2x.png 2x" alt="logo">
-                        <img class="logo-dark logo-img" src="./images/logo-dark-small.png" srcset="./images/logo-dark-small2x.png 2x" alt="logo-dark">
+                        <img class="logo-light logo-img" src="./assets/images/favicon.png" srcset="./images/logo-small2x.png 2x" alt="logo">
+                        <img class="logo-dark logo-img" src="./assets/images/favicon.png" srcset="./images/logo-dark-small2x.png 2x" alt="logo-dark">
                     </a>
                 </div>
                 <div class="nk-sidebar-element">
@@ -1269,51 +1269,52 @@
                                             </div><!-- .card -->
                                         </div>
 
-
-                                        <div class="col-xxl-3 col-sm-6">
+                                        <div class="col-md-4 col-xxl-3">
                                             <div class="card">
-                                                <div class="nk-ecwg nk-ecwg6">
-                                                    <div class="card-inner">
-                                                        <div class="card-title-group">
-                                                            <div class="card-title">
-                                                                <h6 class="title">IPD Income</h6>
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total Private Hospitals</div>
+                                                                <div class="count">200</div>
                                                             </div>
-                                                        </div>
-                                                        <div class="data">
-                                                            <div class="data-group">
-                                                                <div class="amount">$10,945</div>
-                                                                <div class="nk-ecwg6-ck">
-                                                                    <canvas class="ecommerce-line-chart-s3" id="ipdIncome"></canvas>
-                                                                </div>
-                                                            </div>
-                                                            <div class="info"><span class="change up text-danger"><em class="icon ni ni-arrow-long-up"></em>4.63%</span><span> vs. last week</span></div>
-                                                        </div>
-                                                    </div><!-- .card-inner -->
-                                                </div><!-- .nk-ecwg -->
+                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
                                             </div><!-- .card -->
-                                        </div><!-- .col -->
-                                        <div class="col-xxl-3 col-sm-6">
+                                        </div>
+                                        <div class="col-md-4 col-xxl-3">
                                             <div class="card">
-                                                <div class="nk-ecwg nk-ecwg6">
-                                                    <div class="card-inner">
-                                                        <div class="card-title-group">
-                                                            <div class="card-title">
-                                                                <h6 class="title">OPD Income</h6>
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total Private Hospitals</div>
+                                                                <div class="count">200</div>
                                                             </div>
-                                                        </div>
-                                                        <div class="data">
-                                                            <div class="data-group">
-                                                                <div class="amount">$12,338</div>
-                                                                <div class="nk-ecwg6-ck">
-                                                                    <canvas class="ecommerce-line-chart-s3" id="opdIncome"></canvas>
-                                                                </div>
-                                                            </div>
-                                                            <div class="info"><span class="change down text-danger"><em class="icon ni ni-arrow-long-down"></em>2.34%</span><span> vs. last week</span></div>
-                                                        </div>
-                                                    </div><!-- .card-inner -->
-                                                </div><!-- .nk-ecwg -->
+                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
                                             </div><!-- .card -->
-                                        </div><!-- .col -->
+                                        </div>
+                                        <div class="col-md-4 col-xxl-3">
+                                            <div class="card">
+                                                <div class="card-inner">
+                                                    <ul class="nk-store-statistics">
+                                                        <li class="item">
+                                                            <div class="info">
+                                                                <div class="fs-14px fw-bold">Total Private Hospitals</div>
+                                                                <div class="count">200</div>
+                                                            </div>
+                                                            <em class="icon bg-primary-dim ni ni-home-fill"></em>
+                                                        </li>
+                                                    </ul>
+                                                </div><!-- .card-inner -->
+                                            </div><!-- .card -->
+                                        </div>
+                                        
                                         <div class="col-xxl-3 col-sm-6">
                                             <div class="card">
                                                 <div class="nk-ecwg nk-ecwg6">
