--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="A powerful and conceptual apps base dashboard template that especially build for developers and programmers.">
     <!-- Fav Icon  -->
-    <link rel="shortcut icon" href="/images/favicon.png">
+    <link rel="shortcut icon" href="./assets/images/favicon.png">
     <!-- Page Title  -->
     <title> NHID | Login </title>
     <!-- StyleSheets  -->
@@ -27,8 +27,8 @@
                     <div class="nk-block nk-block-middle nk-auth-body  wide-xs">
                         <div class="brand-logo pb-4 text-center">
                             <a href="index.html" class="logo-link">
-                                <img class="logo-light logo-img logo-img-lg" src="/images/logo.png" srcset="./images/logo2x.png 2x" alt="logo">
-                                <img class="logo-dark logo-img logo-img-lg" src="/images/logo-dark.png" srcset="./images/logo-dark2x.png 2x" alt="logo-dark">
+                                <img class="logo-light logo-img logo-img-lg" src="./assets/images/favicon.png" srcset="./images/logo2x.png 2x" alt="logo">
+                                <img class="logo-dark logo-img logo-img-lg" src="./assets/images/favicon.png" srcset="./images/logo-dark2x.png 2x" alt="logo-dark">
                             </a>
                         </div>
                         <div class="card card-bordered">
@@ -53,7 +53,7 @@
                                     <div class="form-group">
                                         <div class="form-label-group">
                                             <label class="form-label" for="password">Password</label>
-                                            <a class="link link-primary link-sm" href="/password-reset.html">Forgot Password?</a>
+                                            <a class="link link-primary link-sm" href="password-reset.html">Forgot Password?</a>
                                         </div>
                                         <div class="form-control-wrap">
                                             <a href="#" class="form-icon form-icon-right passcode-switch lg" data-target="password">
@@ -112,6 +112,9 @@
         }
         else if (username === "private@demo" && password === "12345") {
             window.location.replace("PrivateHospital/private-dashboard.html");
+        }
+        else if (username === "nthc@demo" && password === "12345") {
+            window.location.replace("NTHC/nthc-dashboard.html");
         }
          else {
             alert("Please provide valid login information");
