--- a/FederalHospital/federal-dashboard.html
+++ b/FederalHospital/federal-dashboard.html
@@ -24,8 +24,8 @@
                     <div class="nk-menu-content menu-active" data-content="navHospital">
                         <div class="nk-apps-brand">
                             <a href="federal-dashboard.html" class="logo-link">
-                                <img class="logo-light logo-img" src="./assets/images/nhid-logo.png" srcset="./images/logo-small2x.png 2x" alt="logo">
-                                <img class="logo-dark logo-img" src="./assets/images/nhid-logo.png" srcset="./images/logo-dark-small2x.png 2x" alt="logo-dark">
+                                <img class="logo-light logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo">
+                                <img class="logo-dark logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo-dark">
                             </a>
                         </div>
                         <!-- <h5 class="title">NHID</h5> -->
@@ -159,9 +159,9 @@
                                 <a href="#" class="nk-nav-toggle nk-quick-nav-icon" data-target="sidebarMenu"><em class="icon ni ni-menu"></em></a>
                             </div>
                             <div class="nk-header-brand d-xl-none">
-                                <a href="html/index.html" class="logo-link">
-                                    <img class="logo-light logo-img" src="./images/logo.png" srcset="./images/logo2x.png 2x" alt="logo">
-                                    <img class="logo-dark logo-img" src="./images/logo-dark.png" srcset="./images/logo-dark2x.png 2x" alt="logo-dark">
+                                <a href="federal-dashboard.html" class="logo-link">
+                                    <img class="logo-light logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo">
+                                    <img class="logo-dark logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo-dark">
                                 </a>
                             </div><!-- .nk-header-brand -->
                             <div class="nk-header-search ms-3 ms-xl-0">
