--- a/StateHospital/state-dashboard.html
+++ b/StateHospital/state-dashboard.html
@@ -24,8 +24,8 @@
                     <div class="nk-menu-content menu-active" data-content="navHospital">
                         <div class="nk-apps-brand">
                             <a href="federal-dashboard.html" class="logo-link">
-                                <img class="logo-light logo-img" src="./assets/images/nhid-logo.png" srcset="./images/logo-small2x.png 2x" alt="logo">
-                                <img class="logo-dark logo-img" src="./assets/images/nhid-logo.png" srcset="./images/logo-dark-small2x.png 2x" alt="logo-dark">
+                                <img class="logo-light logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo">
+                                <img class="logo-dark logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo-dark">
                             </a>
                         </div>
                         <!-- <h5 class="title">NHID</h5> -->
@@ -160,8 +160,8 @@
                             </div>
                             <div class="nk-header-brand d-xl-none">
                                 <a href="html/index.html" class="logo-link">
-                                    <img class="logo-light logo-img" src="./images/logo.png" srcset="./images/logo2x.png 2x" alt="logo">
-                                    <img class="logo-dark logo-img" src="./images/logo-dark.png" srcset="./images/logo-dark2x.png 2x" alt="logo-dark">
+                                    <img class="logo-light logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo">
+                                    <img class="logo-dark logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo-dark">
                                 </a>
                             </div><!-- .nk-header-brand -->
                             <div class="nk-header-search ms-3 ms-xl-0">
