--- a/register.html
+++ b/register.html
@@ -27,8 +27,8 @@
                     <div class="nk-block nk-block-middle nk-auth-body wide-xs">
                         <div class="brand-logo pb-4 text-center">
                             <a href="index.html" class="logo-link">
-                                <img class="logo-light logo-img logo-img-lg" src="./assets/images/favicon.png" srcset="./images/logo2x.png 2x" alt="logo">
-                                <img class="logo-dark logo-img logo-img-lg" src="./assets/images/favicon.png" srcset="./images/logo-dark2x.png 2x" alt="logo-dark">
+                                <img class="logo-light logo-img logo-img-lg" src="./assets/images/favicon.png" srcset="./assets/images/favicon.png 2x" alt="logo">
+                                <img class="logo-dark logo-img logo-img-lg" src="./assets/images/favicon.png" srcset="./assets/images/favicon.png 2x" alt="logo-dark">
                             </a>
                         </div>
                         <div class="card card-bordered">
