--- a/superAdmin/super-admin-dashboard.html
+++ b/superAdmin/super-admin-dashboard.html
@@ -890,12 +890,12 @@
                                                     <li class="chat-item is-unread">
                                                         <a class="chat-link" href="#">
                                                             <div class="chat-media user-avatar bg-pink">
-                                                                <span>AB</span>
+                                                                <span>KS</span>
                                                                 <span class="status dot dot-lg dot-success"></span>
                                                             </div>
                                                             <div class="chat-info">
                                                                 <div class="chat-from">
-                                                                    <div class="name">Abu Bin Ishtiyak</div>
+                                                                    <div class="name">Kabiru Sani</div>
                                                                     <span class="time">4:49 AM</span>
                                                                 </div>
                                                                 <div class="chat-context">
@@ -1062,41 +1062,7 @@
                                             </div>
                                         </div>
                                     </li>
-                                    <li class="dropdown language-dropdown d-none d-sm-block me-n1">
-                                        <a href="#" class="dropdown-toggle nk-quick-nav-icon" data-bs-toggle="dropdown">
-                                            <div class="quick-icon border border-light">
-                                                <img class="icon" src="./images/flags/english-sq.png" alt="">
-                                            </div>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-end dropdown-menu-s1">
-                                            <ul class="language-list">
-                                                <li>
-                                                    <a href="#" class="language-item">
-                                                        <img src="./images/flags/english.png" alt="" class="language-flag">
-                                                        <span class="language-name">English</span>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#" class="language-item">
-                                                        <img src="./images/flags/spanish.png" alt="" class="language-flag">
-                                                        <span class="language-name">Español</span>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#" class="language-item">
-                                                        <img src="./images/flags/french.png" alt="" class="language-flag">
-                                                        <span class="language-name">Français</span>
-                                                    </a>
-                                                </li>
-                                                <li>
-                                                    <a href="#" class="language-item">
-                                                        <img src="./images/flags/turkey.png" alt="" class="language-flag">
-                                                        <span class="language-name">Türkçe</span>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </li><!-- .dropdown -->
+                                   
                                     <li class="dropdown user-dropdown">
                                         <a href="#" class="dropdown-toggle me-n1" data-bs-toggle="dropdown">
                                             <div class="user-toggle">
@@ -1109,11 +1075,11 @@
                                             <div class="dropdown-inner user-card-wrap bg-lighter">
                                                 <div class="user-card">
                                                     <div class="user-avatar">
-                                                        <span>AB</span>
+                                                        <span>KS</span>
                                                     </div>
                                                     <div class="user-info">
-                                                        <span class="lead-text">Abu Bin Ishtiyak</span>
-                                                        <span class="sub-text">info@softnio.com</span>
+                                                        <span class="lead-text">Kabiru Sani</span>
+                                                        <span class="sub-text">info@kbs.com</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -1290,7 +1256,7 @@
                                                     <ul class="nk-store-statistics">
                                                         <li class="item">
                                                             <div class="info">
-                                                                <div class="fs-14px fw-bold">Total Private Hospitals</div>
+                                                                <div class="fs-14px fw-bold">Total Departments</div>
                                                                 <div class="count">200</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-home-fill"></em>
@@ -1305,7 +1271,7 @@
                                                     <ul class="nk-store-statistics">
                                                         <li class="item">
                                                             <div class="info">
-                                                                <div class="fs-14px fw-bold">Total Private Hospitals</div>
+                                                                <div class="fs-14px fw-bold">Total Wards</div>
                                                                 <div class="count">200</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-home-fill"></em>
