--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Softnio">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="A powerful and conceptual apps base dashboard template that especially build for developers and programmers.">
+    <meta name="description" content="National Health Information Database">
     <!-- Fav Icon  -->
     <link rel="shortcut icon" href="./assets/images/favicon.png">
     <!-- Page Title  -->
@@ -115,6 +115,12 @@
         }
         else if (username === "nthc@demo" && password === "12345") {
             window.location.replace("NTHC/nthc-dashboard.html");
+        }
+        else if (username === "stateministry@demo" && password === "12345") {
+            window.location.replace("StateMinistry/state-ministry-dashboard.html");
+        }
+        else if (username === "nhis@demo" && password === "12345") {
+            window.location.replace("NHIS/nhis-dashboard.html");
         }
          else {
             alert("Please provide valid login information");
