--- a/NHIS/nhis-dashboard.html
+++ b/NHIS/nhis-dashboard.html
@@ -10,7 +10,7 @@
     <!-- Fav Icon  -->
     <link rel="shortcut icon" href="./assets/images/favicon.png">
     <!-- Page Title  -->
-    <title>State Hospital | Dashboard </title>
+    <title> NHIS | Dashboard </title>
     <!-- StyleSheets  -->
     <link rel="stylesheet" href="./assets/css/dashlite.css?ver=3.1.3">
     <link id="skin-default" rel="stylesheet" href="./assets/css/theme.css?ver=3.1.3">
@@ -31,27 +31,22 @@
                         <!-- <h5 class="title">NHID</h5> -->
                         <ul class="nk-menu">
                             <li class="nk-menu-item">
-                                <a href="NTHC/nthc-dashboard.html" class="nk-menu-link">
+                                <a href="NHIS/nhis-dashboard.html" class="nk-menu-link">
                                     <span class="nk-menu-icon"><em class="icon ni ni-dashboard-fill"></em></span>
                                     <span class="nk-menu-text">Dashboard</span>
                                 </a>
                             </li><!-- .nk-menu-item -->
                             <li class="nk-menu-item">
-                                <a href="NTHC/manage-hospital.html" class="nk-menu-link">
+                                <a href="NHIS/nhis-hospitals.html" class="nk-menu-link">
                                     <span class="nk-menu-icon"><em class="icon ni ni-home-fill"></em></span>
-                                    <span class="nk-menu-text">Tertiary Hospitals</span>
-                                </a>
-                            </li>
-                            <li class="nk-menu-item">
-                                <a href="html/hospital/appointment.html" class="nk-menu-link">
-                                    <span class="nk-menu-icon"><em class="icon ni ni-note-add-fill"></em></span>
-                                    <span class="nk-menu-text">Appointment List</span>
+                                    <span class="nk-menu-text">NHIS Acredited Hospitals</span>
                                 </a>
                             </li><!-- .nk-menu-item -->
+                            
                             <li class="nk-menu-item has-sub">
                                 <a href="#" class="nk-menu-link nk-menu-toggle">
                                     <span class="nk-menu-icon"><em class="icon ni ni-users-fill"></em></span>
-                                    <span class="nk-menu-text">Patients Record</span>
+                                    <span class="nk-menu-text">NHIS Patients Record</span>
                                 </a>
                                 <ul class="nk-menu-sub">
                                     <li class="nk-menu-item">
@@ -68,14 +63,14 @@
                             <li class="nk-menu-item has-sub">
                                 <a href="#" class="nk-menu-link nk-menu-toggle">
                                     <span class="nk-menu-icon"><em class="icon ni ni-plus-medi-fill"></em></span>
-                                    <span class="nk-menu-text">Manage Medical / Non-Medical Staff</span>
+                                    <span class="nk-menu-text">NHIS Accredited Hospitals Staff</span>
                                 </a>
                                 <ul class="nk-menu-sub">
                                     <li class="nk-menu-item">
                                         <a href="html/hospital/doctor-nurse-add.html" class="nk-menu-link"><span class="nk-menu-text">Add Doctor / Nurses</span></a>
                                     </li>
                                     <li class="nk-menu-item">
-                                        <a href="html/hospital/doctor-nurse-list.html" class="nk-menu-link"><span class="nk-menu-text">Doctors / Nurses</span></a>
+                                        <a href="html/hospital/doctor-nurse-list.html" class="nk-menu-link"><span class="nk-menu-text">Manage Doctors / Nurses</span></a>
                                     </li>
                                 </ul><!-- .nk-menu-sub -->
                             </li><!-- .nk-menu-item -->
@@ -83,7 +78,7 @@
                             <li class="nk-menu-item has-sub">
                                 <a href="#" class="nk-menu-link nk-menu-toggle">
                                     <span class="nk-menu-icon"><em class="icon ni ni-activity-round-fill"></em></span>
-                                    <span class="nk-menu-text">Hospital Inventory</span>
+                                    <span class="nk-menu-text">Hospital Inventory Report</span>
                                 </a>
                                 <ul class="nk-menu-sub">
                                     <li class="nk-menu-item">
@@ -100,7 +95,7 @@
                             <li class="nk-menu-item has-sub">
                                 <a href="#" class="nk-menu-link nk-menu-toggle">
                                     <span class="nk-menu-icon"><em class="icon ni ni-panel-fill"></em></span>
-                                    <span class="nk-menu-text">Reports</span>
+                                    <span class="nk-menu-text">NHIS Reports</span>
                                 </a>
                                 <ul class="nk-menu-sub">
                                     <li class="nk-menu-item">
@@ -401,7 +396,7 @@
                                 <div class="nk-block-head nk-block-head-sm">
                                     <div class="nk-block-between">
                                         <div class="nk-block-head-content">
-                                            <h3 class="nk-block-title page-title">National Tertiary Hospital Commission Dashboard</h3>
+                                            <h3 class="nk-block-title page-title">NHIS Dashboard</h3>
                                         </div><!-- .nk-block-head-content -->
                                         <!-- <div class="nk-block-head-content">
                                             <a data-bs-toggle="modal" href="#addItems" class="btn btn-icon btn-primary d-md-none"><em class="icon ni ni-plus"></em></a>
@@ -417,8 +412,8 @@
                                                     <ul class="nk-store-statistics">
                                                         <li class="item">
                                                             <div class="info">
-                                                                <div class="fs-14px fw-bold">Total Tertiary Hospitals </div>
-                                                                <div class="count">470</div>
+                                                                <div class="fs-14px fw-bold">NHIS Accredited Hospitals </div>
+                                                                <div class="count">1470</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-home-fill"></em>
                                                         </li>
@@ -433,7 +428,7 @@
                                                         <li class="item">
                                                             <div class="info">
                                                                 <div class="fs-14px fw-bold">Total Medical Staff</div>
-                                                                <div class="count">2000</div>
+                                                                <div class="count">4300</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-users"></em>
                                                         </li>
@@ -448,7 +443,7 @@
                                                         <li class="item">
                                                             <div class="info">
                                                                 <div class="fs-14px fw-bold">Total Non-Medical Staff </div>
-                                                                <div class="count">1,170</div>
+                                                                <div class="count">2,170</div>
                                                             </div>
                                                             <em class="icon bg-primary-dim ni ni-users"></em>
                                                         </li>
@@ -465,10 +460,10 @@
                                                     <ul class="nk-store-statistics">
                                                         <li class="item">
                                                             <div class="info">
-                                                                <div class="fs-14px fw-bold">Total Items</div>
-                                                                <div class="count">2,470</div>
+                                                                <div class="fs-14px fw-bold">Total Birth Report</div>
+                                                                <div class="count">22,470</div>
                                                             </div>
-                                                            <em class="icon bg-primary-dim ni ni-box"></em>
+                                                            <em class="icon bg-primary-dim ni ni-user-circle-fill"></em>
                                                         </li>
                                                     </ul>
                                                 </div><!-- .card-inner -->
@@ -480,10 +475,10 @@
                                                     <ul class="nk-store-statistics">
                                                         <li class="item">
                                                             <div class="info">
-                                                                <div class="fs-14px fw-bold">Total Equipments</div>
-                                                                <div class="count">607</div>
+                                                                <div class="fs-14px fw-bold">Total Death Report</div>
+                                                                <div class="count">107</div>
                                                             </div>
-                                                            <em class="icon bg-info-dim ni ni-property-alt"></em>
+                                                            <em class="icon bg-info-dim ni ni-user-alt"></em>
                                                         </li>
                                                     </ul>
                                                 </div><!-- .card-inner -->
@@ -498,7 +493,7 @@
                                                                 <div class="fs-14px fw-bold">Total Tools</div>
                                                                 <div class="count">653</div>
                                                             </div>
-                                                            <em class="icon bg-pink-dim ni ni-scissor"></em>
+                                                            <em class="icon bg-pink-dim ni ni-property-alt"></em>
                                                         </li>
                                                     </ul>
                                                 </div><!-- .card-inner -->
