--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
         else if (username === "nhis@demo" && password === "12345") {
             window.location.replace("NHIS/nhis-dashboard.html");
         }
+        else if (username === "subscriber@demo" && password === "12345") {
+            window.location.replace("subscriber/subscriber-dashbaord.html");
+        }
          else {
             alert("Please provide valid login information");
             return;
